crates/ruff_python_parser/tests/snapshots/invalid_syntax@type_stmt_py311.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/type_stmt_py311.py
---
## AST

```
Module(
    ModModule {
        range: 0..57,
        body: [
            TypeAlias(
                StmtTypeAlias {
                    range: 44..56,
                    name: Name(
                        ExprName {
                            range: 49..50,
                            id: Name("x"),
                            ctx: Store,
                        },
                    ),
                    type_params: None,
                    value: Name(
                        ExprName {
                            range: 53..56,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Unsupported Syntax Errors

  |
1 | # parse_options: {"target-version": "3.11"}
2 | type x = int
  | ^^^^ Syntax Error: Cannot use `type` alias statement on Python 3.11 (syntax was added in Python 3.12)
  |
